before I ruin things too badly, adding the path manager.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -329,6 +329,8 @@ INCLUDE_DIRECTORIES(
 
 # executable DeltaRobotFirmware
 ADD_EXECUTABLE(DeltaRobotFirmware
+  path.h
+  path.cpp
   Axis.cpp
   Axis.h
   lTime.h
